[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "=0.8.3", features = ["serde", "k256", "rlp"] }
alloy-sol-types = "=0.8.3"
hashbrown = { version = "=0.14.5", features = ["serde"] }
eyre = "=0.6.12"
serde = { version = "=1.0", features = ["derive"] }
bincode = "=1.3.3"
alloy-rlp = { version = "=0.3.8", features = ["derive"] }
alloy-rlp-derive = { version = "=0.3", default-features = false }
hex = "=0.4.3"
rs_merkle = "=1.4.2"
sp1-zkvm = "=3.0.0"
flate2 = "=1.0"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
