[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3", features = ["full"] }
alloy-rlp = { version = "=0.3.8", features = ["derive"] }
alloy-rlp-derive = { version = "=0.3", default-features = false }
eyre = "0.6.12"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
program = { path = "../program" }
flate2 = "=1.0"
